src/test/deca/context/invalid/created/SansObjet/VoidVar.deca
// Resultats :
//    Erreur contextuelle
//    Ligne 6: Error: void cannot be used as a type for variable declaration

{
    void a;
}
